test/corpus/import.txt
================================================================================
Simple import
================================================================================

import abc;

--------------------------------------------------------------------------------

(source_file
  (import_definition
    (path)))

================================================================================
Wildcard import
================================================================================

import abc.def.*;

--------------------------------------------------------------------------------

(source_file
  (import_definition
    (path)))
