test/corpus/package.txt
================================================================================
Simple package declaration
================================================================================

package mypackage;

--------------------------------------------------------------------------------

(source_file
  (package_definition
    (identifier)))

================================================================================
Package with dotted name
================================================================================

package my.package.name;

--------------------------------------------------------------------------------

(source_file
  (package_definition
    (identifier)))
